# lidar-range-image-mask-creation

./: .gitignore  README.md
lidar_seg/: CMakeLists.txt
lidar_seg/pointclouds/1_pcd/: cloud0_0.000000.pcd  cloud200_200.000000.pcd  cloud88_88.000000.pcd
lidar_seg/scripts/: create_masks.py
lidar_seg/src/: rangeImageVisualization.cpp
lidar_seg_ros/: CMakeLists.txt  package.xml
lidar_seg_ros/pointclouds/2_ascii/: cloud0_0.000000.asc  cloud200_200.000000.asc  cloud88_88.000000.asc
lidar_seg_ros/scripts/: create_masks.py
lidar_seg_ros/src/: rangeImageVisualization.cpp
